edit layout bug

--- a/general.css
+++ b/general.css
@@ -114,7 +114,8 @@ h1 {
 main {
   flex: 1;
   animation: slideup 1s ease;
-  max-width: 900px;
+  max-width: 100vw;
+  overflow-x: hidden;
   min-width: 90%;
   margin: 20px auto 70px;
   padding: calc(var(--padding) * 2);
